# agentic-godot

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
addon/godot_loop/: LoopLaunchConfig.gd  LoopLaunchConfig.gd.uid  README.md  RuntimeInspectorServer.gd  RuntimeInspectorServer.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid
docs/: INTEGRATING.md
examples/: godot-loop.toml
examples/godot_project/: Main.gd  Main.tscn  README.md  godot-loop.toml  project.godot
src/godot_loop/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  runners.py  utils.py
tests/: test_cli.py  test_config.py  test_mcp_server.py  test_runtime_inspector_source.py  test_utils.py
